Initial test setup

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-test02",
   "version": "1.0.0",
-  "description": "fuck this shit",
+  "description": "a test",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,7 +13,9 @@
     "nodemon": "^1.18.9"
   },
   "dependencies": {
+    "nodemon": "^1.18.9",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
